<resources>

    <string name="app_name">MyCheckins</string>
    <string name="checkin_title">Enter the title of your Check-in</string>
    <string name="checkin_detail">Enter any details of your Check-in.</string>
    <string name="checkin_place">Enter the place of your Check-in</string>
    <string name="checkin_date">Date</string>
    <string name="checkin_location">Location</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="google_maps_key">AIzaSyBM_5TY1BLSCMuyAmb0795GVyWpHb8J3rE</string>
    <string name="show_help">Help</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="checkin_location_map">Show Map</string>
    <string name="crime_report_text">Share Check-in</string>
    <string name="crime_report">%1$s!The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_help">Help</string>

</resources>
